test/negative/empty_match.mli
val f : int -> int
(*@ y = f x
    requires match x with *)
